--- a/main.html
+++ b/main.html
@@ -7,6 +7,27 @@
 </head>
 
 <body>
+	 <h2>Student Table</h2>
+
+<table border="1">
+  <thead>
+    <tr>
+      <th>Roll Number</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>1</td>
+      <td>Priya</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Rohan</td>
+    </tr>
+  </tbody>
+</table>
+ 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
